-- phpMyAdmin SQL Dump
-- version 5.2.2
-- https://www.phpmyadmin.net/
--
-- Host: localhost:3306
-- Generation Time: Mar 20, 2026 at 12:18 AM
-- Server version: 10.6.18-MariaDB-cll-lve-log
-- PHP Version: 8.4.18

SET SQL_MODE = "NO_AUTO_VALUE_ON_ZERO";
START TRANSACTION;
SET time_zone = "+00:00";


/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */;
/*!40101 SET @OLD_CHARACTER_SET_RESULTS=@@CHARACTER_SET_RESULTS */;
/*!40101 SET @OLD_COLLATION_CONNECTION=@@COLLATION_CONNECTION */;
/*!40101 SET NAMES utf8mb4 */;

--
-- Database: `wccvkyut_wp873`
--

-- --------------------------------------------------------

--
-- Table structure for table `inventory`
--

CREATE TABLE `inventory` (
  `inventory_id` int(11) NOT NULL,
  `warehouse_id` int(11) NOT NULL,
  `quantity_storage` int(11) NOT NULL DEFAULT 0,
  `updated_at` datetime DEFAULT current_timestamp() ON UPDATE current_timestamp(),
  `product_id` int(11) NOT NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;

--
-- Dumping data for table `inventory`
--

INSERT INTO `inventory` (`inventory_id`, `warehouse_id`, `quantity_storage`, `updated_at`, `product_id`) VALUES
(104, 1, 117, '2026-03-19 23:48:08', 1),
(105, 2, 297, '2026-03-19 23:48:08', 1),
(106, 3, 182, '2026-03-19 23:48:08', 1),
(107, 4, 422, '2026-03-19 23:48:08', 1),
(108, 5, 160, '2026-03-19 23:48:08', 1),
(109, 1, 386, '2026-03-19 23:48:08', 2),
(110, 2, 50, '2026-03-19 23:48:08', 2),
(111, 3, 393, '2026-03-19 23:48:08', 2),
(112, 4, 413, '2026-03-19 23:48:08', 2),
(113, 5, 386, '2026-03-19 23:48:08', 2),
(114, 1, 191, '2026-03-19 23:48:08', 3),
(115, 2, 199, '2026-03-19 23:48:08', 3),
(116, 3, 373, '2026-03-19 23:48:08', 3),
(117, 4, 318, '2026-03-19 23:48:08', 3),
(118, 5, 418, '2026-03-19 23:48:08', 3),
(119, 1, 188, '2026-03-19 23:48:08', 4),
(120, 2, 85, '2026-03-19 23:48:08', 4),
(121, 3, 263, '2026-03-19 23:48:08', 4),
(122, 4, 109, '2026-03-19 23:48:08', 4),
(123, 5, 156, '2026-03-19 23:48:08', 4),
(124, 1, 405, '2026-03-19 23:48:08', 5),
(125, 2, 156, '2026-03-19 23:48:08', 5),
(126, 3, 415, '2026-03-19 23:48:08', 5),
(127, 4, 204, '2026-03-19 23:48:08', 5),
(128, 5, 178, '2026-03-19 23:48:08', 5),
(129, 1, 226, '2026-03-19 23:48:08', 6),
(130, 2, 97, '2026-03-19 23:48:08', 6),
(131, 3, 208, '2026-03-19 23:48:08', 6),
(132, 4, 251, '2026-03-19 23:48:08', 6),
(133, 5, 127, '2026-03-19 23:48:08', 6),
(134, 1, 285, '2026-03-19 23:48:08', 7),
(135, 2, 91, '2026-03-19 23:48:08', 7),
(136, 3, 454, '2026-03-19 23:48:08', 7),
(137, 4, 142, '2026-03-19 23:48:08', 7),
(138, 5, 200, '2026-03-19 23:48:08', 7),
(139, 1, 76, '2026-03-19 23:48:08', 8),
(140, 2, 180, '2026-03-19 23:48:08', 8),
(141, 3, 171, '2026-03-19 23:48:08', 8),
(142, 4, 266, '2026-03-19 23:48:08', 8),
(143, 5, 318, '2026-03-19 23:48:08', 8),
(144, 1, 288, '2026-03-19 23:48:08', 9),
(145, 2, 440, '2026-03-19 23:48:08', 9),
(146, 3, 383, '2026-03-19 23:48:08', 9),
(147, 4, 93, '2026-03-19 23:48:08', 9),
(148, 5, 169, '2026-03-19 23:48:08', 9),
(149, 1, 68, '2026-03-19 23:48:08', 10),
(150, 2, 233, '2026-03-19 23:48:08', 10),
(151, 3, 461, '2026-03-19 23:48:08', 10),
(152, 4, 203, '2026-03-19 23:48:08', 10),
(153, 5, 486, '2026-03-19 23:48:08', 10),
(154, 1, 419, '2026-03-19 23:48:08', 11),
(155, 2, 137, '2026-03-19 23:48:08', 11),
(156, 3, 279, '2026-03-19 23:48:08', 11),
(157, 4, 482, '2026-03-19 23:48:08', 11),
(158, 5, 171, '2026-03-19 23:48:08', 11),
(159, 1, 263, '2026-03-19 23:48:08', 12),
(160, 2, 301, '2026-03-19 23:48:08', 12),
(161, 3, 216, '2026-03-19 23:48:08', 12),
(162, 4, 126, '2026-03-19 23:48:08', 12),
(163, 5, 382, '2026-03-19 23:48:08', 12),
(164, 1, 132, '2026-03-19 23:48:08', 13),
(165, 2, 366, '2026-03-19 23:48:08', 13),
(166, 3, 484, '2026-03-19 23:48:08', 13),
(167, 4, 371, '2026-03-19 23:48:08', 13),
(168, 5, 353, '2026-03-19 23:48:08', 13),
(169, 1, 149, '2026-03-19 23:48:08', 14),
(170, 2, 90, '2026-03-19 23:48:08', 14),
(171, 3, 404, '2026-03-19 23:48:08', 14),
(172, 4, 348, '2026-03-19 23:48:08', 14),
(173, 5, 478, '2026-03-19 23:48:08', 14),
(174, 1, 395, '2026-03-19 23:48:08', 15),
(175, 2, 491, '2026-03-19 23:48:08', 15),
(176, 3, 320, '2026-03-19 23:48:08', 15),
(177, 4, 76, '2026-03-19 23:48:08', 15),
(178, 5, 271, '2026-03-19 23:48:08', 15),
(179, 1, 178, '2026-03-19 23:48:08', 16),
(180, 2, 477, '2026-03-19 23:48:08', 16),
(181, 3, 450, '2026-03-19 23:48:08', 16),
(182, 4, 319, '2026-03-19 23:48:08', 16),
(183, 5, 195, '2026-03-19 23:48:08', 16),
(184, 1, 417, '2026-03-19 23:48:08', 17),
(185, 2, 101, '2026-03-19 23:48:08', 17),
(186, 3, 105, '2026-03-19 23:48:08', 17),
(187, 4, 171, '2026-03-19 23:48:08', 17),
(188, 5, 490, '2026-03-19 23:48:08', 17),
(189, 1, 83, '2026-03-19 23:48:08', 18),
(190, 2, 251, '2026-03-19 23:48:08', 18),
(191, 3, 55, '2026-03-19 23:48:08', 18),
(192, 4, 373, '2026-03-19 23:48:08', 18),
(193, 5, 296, '2026-03-19 23:48:08', 18),
(194, 1, 313, '2026-03-19 23:48:08', 19),
(195, 2, 175, '2026-03-19 23:48:08', 19),
(196, 3, 339, '2026-03-19 23:48:08', 19),
(197, 4, 217, '2026-03-19 23:48:08', 19),
(198, 5, 472, '2026-03-19 23:48:08', 19),
(199, 1, 306, '2026-03-19 23:48:08', 20),
(200, 2, 62, '2026-03-19 23:48:08', 20),
(201, 3, 247, '2026-03-19 23:48:08', 20),
(202, 4, 97, '2026-03-19 23:48:08', 20),
(203, 5, 147, '2026-03-19 23:48:08', 20),
(204, 1, 393, '2026-03-19 23:48:08', 21),
(205, 2, 122, '2026-03-19 23:48:08', 21),
(206, 3, 284, '2026-03-19 23:48:08', 21),
(207, 4, 100, '2026-03-19 23:48:08', 21),
(208, 5, 53, '2026-03-19 23:48:08', 21),
(209, 1, 363, '2026-03-19 23:48:08', 22),
(210, 2, 255, '2026-03-19 23:48:08', 22),
(211, 3, 137, '2026-03-19 23:48:08', 22),
(212, 4, 321, '2026-03-19 23:48:08', 22),
(213, 5, 242, '2026-03-19 23:48:08', 22),
(214, 1, 198, '2026-03-19 23:48:08', 23),
(215, 2, 214, '2026-03-19 23:48:08', 23),
(216, 3, 425, '2026-03-19 23:48:08', 23),
(217, 4, 82, '2026-03-19 23:48:08', 23),
(218, 5, 437, '2026-03-19 23:48:08', 23),
(219, 1, 85, '2026-03-19 23:48:08', 24),
(220, 2, 420, '2026-03-19 23:48:08', 24),
(221, 3, 440, '2026-03-19 23:48:08', 24),
(222, 4, 442, '2026-03-19 23:48:08', 24),
(223, 5, 387, '2026-03-19 23:48:08', 24),
(224, 1, 111, '2026-03-19 23:48:08', 25),
(225, 2, 244, '2026-03-19 23:48:08', 25),
(226, 3, 389, '2026-03-19 23:48:08', 25),
(227, 4, 260, '2026-03-19 23:48:08', 25),
(228, 5, 85, '2026-03-19 23:48:08', 25),
(229, 1, 496, '2026-03-19 23:48:08', 26),
(230, 2, 374, '2026-03-19 23:48:08', 26),
(231, 3, 331, '2026-03-19 23:48:08', 26),
(232, 4, 484, '2026-03-19 23:48:08', 26),
(233, 5, 477, '2026-03-19 23:48:08', 26),
(234, 1, 433, '2026-03-19 23:48:08', 27),
(235, 2, 231, '2026-03-19 23:48:08', 27),
(236, 3, 258, '2026-03-19 23:48:08', 27),
(237, 4, 95, '2026-03-19 23:48:08', 27),
(238, 5, 105, '2026-03-19 23:48:08', 27),
(239, 1, 189, '2026-03-19 23:48:08', 28),
(240, 2, 131, '2026-03-19 23:48:08', 28),
(241, 3, 488, '2026-03-19 23:48:08', 28),
(242, 4, 196, '2026-03-19 23:48:08', 28),
(243, 5, 367, '2026-03-19 23:48:08', 28),
(244, 1, 297, '2026-03-19 23:48:08', 29),
(245, 2, 335, '2026-03-19 23:48:08', 29),
(246, 3, 282, '2026-03-19 23:48:08', 29),
(247, 4, 356, '2026-03-19 23:48:08', 29),
(248, 5, 435, '2026-03-19 23:48:08', 29),
(249, 1, 156, '2026-03-19 23:48:08', 30),
(250, 2, 325, '2026-03-19 23:48:08', 30),
(251, 3, 209, '2026-03-19 23:48:08', 30),
(252, 4, 468, '2026-03-19 23:48:08', 30),
(253, 5, 311, '2026-03-19 23:48:08', 30),
(254, 1, 100, '2026-03-19 23:48:08', 31),
(255, 2, 423, '2026-03-19 23:48:08', 31),
(256, 3, 410, '2026-03-19 23:48:08', 31),
(257, 4, 281, '2026-03-19 23:48:08', 31),
(258, 5, 124, '2026-03-19 23:48:08', 31),
(259, 1, 179, '2026-03-19 23:48:08', 32),
(260, 2, 472, '2026-03-19 23:48:08', 32),
(261, 3, 423, '2026-03-19 23:48:08', 32),
(262, 4, 199, '2026-03-19 23:48:08', 32),
(263, 5, 128, '2026-03-19 23:48:08', 32),
(264, 1, 443, '2026-03-19 23:48:08', 33),
(265, 2, 427, '2026-03-19 23:48:08', 33),
(266, 3, 307, '2026-03-19 23:48:08', 33),
(267, 4, 204, '2026-03-19 23:48:08', 33),
(268, 5, 50, '2026-03-19 23:48:08', 33),
(269, 1, 491, '2026-03-19 23:48:08', 34),
(270, 2, 452, '2026-03-19 23:48:08', 34),
(271, 3, 285, '2026-03-19 23:48:08', 34),
(272, 4, 469, '2026-03-19 23:48:08', 34),
(273, 5, 91, '2026-03-19 23:48:08', 34),
(274, 1, 350, '2026-03-19 23:48:08', 35),
(275, 2, 76, '2026-03-19 23:48:08', 35),
(276, 3, 182, '2026-03-19 23:48:08', 35),
(277, 4, 182, '2026-03-19 23:48:08', 35),
(278, 5, 316, '2026-03-19 23:48:08', 35);

--
-- Indexes for dumped tables
--

--
-- Indexes for table `inventory`
--
ALTER TABLE `inventory`
  ADD PRIMARY KEY (`inventory_id`),
  ADD UNIQUE KEY `unique_warehouse_product` (`warehouse_id`,`product_id`),
  ADD KEY `fk_inventory_product` (`product_id`);

--
-- AUTO_INCREMENT for dumped tables
--

--
-- AUTO_INCREMENT for table `inventory`
--
ALTER TABLE `inventory`
  MODIFY `inventory_id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=359;

--
-- Constraints for dumped tables
--

--
-- Constraints for table `inventory`
--
ALTER TABLE `inventory`
  ADD CONSTRAINT `fk_inventory_product` FOREIGN KEY (`product_id`) REFERENCES `products` (`product_id`) ON DELETE CASCADE,
  ADD CONSTRAINT `fk_inventory_warehouse` FOREIGN KEY (`warehouse_id`) REFERENCES `ware_houses` (`warehouse_id`) ON UPDATE CASCADE;
COMMIT;

/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT */;
/*!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS */;
/*!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION */;
